--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y nmap arp-skan
+          sudo apt install -y nmap arp-scan
           
       - name: Run tests
         run: |
